--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,8 @@ services:
       context: ~/repos/agentic-ai
       dockerfile: Dockerfile
     container_name: agentic_ai
-    depends_on:
-      - ollama
+    # depends_on:
+    #   - ollama
     ports:
       - 11223:11223
     volumes:
@@ -18,18 +18,18 @@ services:
     command: >
       /bin/bash -c "jupyter-notebook --ip=* --port=11223 --no-browser --allow-root"
   
-  ollama:
-    container_name: ollama
-    image: ollama/ollama:latest
-    volumes:
-      - ./ollama:/root/.ollama
-    environment:
-      - "OLLAMA_HOST=0.0.0.0:11434"
-      - "OLLAMA_ORIGINS=http://0.0.0.0:11434"
-    ports:
-      - 11434:11434
-    command: >
-      /bin/bash -c "ollama run qwen2:1.5b"
+  # ollama:
+  #   container_name: ollama
+  #   image: ollama/ollama:latest
+  #   volumes:
+  #     - ./ollama:/root/.ollama
+  #   environment:
+  #     - "OLLAMA_HOST=0.0.0.0:11434"
+  #     - "OLLAMA_ORIGINS=http://0.0.0.0:11434"
+  #   ports:
+  #     - 11434:11434
+  #   command: >
+  #     /bin/bash -c "ollama pull qwen2:1.5b"
     
 
     # environment:
