--- a/tutorials/merge_models.yml
+++ b/tutorials/merge_models.yml
@@ -5,6 +5,6 @@ models:
   - model: deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
     parameters:
       weight: 0.5
-base_model: Qwen/QwQ-32B
+base_model: deepseek-ai/DeepSeek-R1-Distill-Qwen-32B
 merge_method: dare_ties
 dtype: float16
